src/FinancialForce Accounting/objects/codaPaymentHistory__c.object
<CustomObject>
    <customHelpPage>codahelppayment</customHelpPage>
    <description>Log of modifications and resulting status of the payment.</description>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PaymentValue__c</fullName>
        <label>Payment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>codaPayment__c</referenceTo>
        <relationshipLabel>Payments History</relationshipLabel>
        <relationshipName>PaymentsHistory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StageInProcess__c</fullName>
        <label>Stage in Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Selected</fullName>
                </value>
                <value>
                    <fullName>Refined</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Prepared</fullName>
                </value>
                <value>
                    <fullName>Produced</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PaymentsHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deprecated: Payment History</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payment History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>